fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,22 +1,14 @@
 @import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0f0e0e;
+  --foreground: #ededed;
 }
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0f0e0e;
-    --foreground: #ededed;
-  }
 }
 
 body {
